se cambio for por foreach, se agregaron ';', se traen datos de un json con ajax

--- a/toDoListStyles.css
+++ b/toDoListStyles.css
@@ -51,7 +51,7 @@ h1 {
   margin: 0 auto;
 }
 
-.div-description {
+.description {
   width: 80%;
 }
 
@@ -82,7 +82,7 @@ h1 {
   margin: 0 auto;
 }
 
-.div-actions {
+.actions {
   width: 20%;
 }
 
